Add checkerframework nullness checker. Nicer logging for production profile and experimented with version provider.